--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -15,4 +15,139 @@ Tasks
 -----
 
 * [X] Contact Heather 2020-01-07
+* [ ] Extract outcomes from Jim's book.
 
+Learning outcomes
+-----------------
+
+The following sections of learning outcomes are extracted verbatim from [Jim's
+online textbook].
+
+[Jim's online textbook]:
+https://cs.umanitoba.ca/~young/learnToProgram/LTP/LTP-AllUnits.pdf
+
+### Unit 1
+
+* Explain to a layperson what computer programming is
+* Calculate how many operations a computer can perform each second based on its
+  specifications
+
+### Unit 2
+
+* Choose and set the canvas size for your programs. :processing:
+* Set the location where shapes are drawn on the canvas. :processing:
+* Set the background, outline, and fill colors of your canvas and shapes.
+  :processing:
+* Draw lines, circles, ellipses, triangles, and points. :processing:
+* Insert in-line and block comments to describe your program.
+
+What might be missing, or more general learning outcomes:
+
+* Write a simple program.
+* Run a simple program.
+
+### Unit 3
+
+* Create a new integer variable and give it a unique name.
+* Store information into a variable (e.g., the number 10).
+* Get information out of a variable. :ambiguous:
+* Create a variable and give it an initial value in one line of code.
+* Create multiple variables in one line of code.
+* Add, subtract, multiply, and divide integers.
+* Get the remainder when dividing two integers.
+* Apply order of operations to figure out the result of a calculation.
+  :prerequisite: :high-school:
+* Use the built-in `println` command to look inside variables for investigating
+  your errors. :processing:
+  
+What might be missing, or more general learning outcomes:
+
+* Debug simple errors by inspecting the value of variables.
+* Use a variable in an expression.
+* Use arithmetic operators in an expression (add, subtract, multiply, divide,
+  modulus).
+* Explain the purpose of the modulus operator.
+
+### Unit 4
+
+* Choose meaningful variable names that make your code more readable.
+* Create *named constants* that cannot change once set, as a safety feature.
+
+What might be missing, or more general learning outcomes:
+
+* Explain how named constants can be used as a safety feature.
+* Identify values that should be represented as a named constant.
+* Use named constants in a program.
+
+### Unit 5
+
+* Create an active program that can change while it is running. :processing:
+* Create animations where the drawing changes as time passes. :processing:
+* Use the mouse location as input to your program. :processing:
+* Calculate which of two numbers is larger or smaller. 
+
+**Note**: An "active program" here is **not** loop structures. Instead, we're
+using features of Processing. Processing *itself* has a timer that calls
+functions with specific names repeatedly. The students are not aware that a loop
+is being used behind the scenes here. Note also that the outcome "Calculate..."
+is not covered in the text of this unit.
+
+What might be missing, or more general learning outcomes:
+
+* Use a "global variable" in a program to maintain state across function calls.
+* List the *special* function names that are used in Processing. :processing:
+* Explain the purpose of the special function names used in Processing.
+  :processing:
+* Explain the order of operations in the execution of a Processing program
+  (which functions get run in what order, when global variables are initialized,
+  etc.). :processing:
+
+### Unit 6
+
+* Create your own user-defined functions.
+* Use your custom functions within other functions.
+* Use your custom functions to avoid repeating code.
+* Apply the top-down technique to solve problems.
+
+What might be missing, or more general learning outcomes:
+
+* Explain what happens when a function is called/describe or explain how code
+  flows when a statement is reached that calls a function.
+* Define the term "scope" in terms of variable visibility when declared *within*
+  a function.
+* Determine the visibility of a variable declared in a program.
+* Define the term "local variable".
+
+### Unit 7
+
+* Create variables to store real numbers.
+* Work with real numbers, e.g., do basic math operations.
+* Do basic trigonometry to help with graphical calculations. :prerequisite:
+  :high-school:
+* Use shortcuts for addition, subtraction, multiplication, division, and modulo.
+  :ambiguous:
+* Get the canvas size from new global variables. :processing:
+
+What might be missing, or more general learning outcomes:
+
+* Use real numbers in an expression.
+* Explain the difference between integers and real numbers.
+* Determine if the result of an expression is an integer or a real number.
+* Use built-in trigonometry functions in an expression.
+* Explain how floating point numbers are limited in a computer program.
+* Use compound assignment/arithmetic operators (i.e., `+=`, `++`).
+
+### Unit 8
+
+* Create variables to store text data, called `String`s.
+* Combine multiple `String`s together.
+* Convert between `String`s and numerical data.
+* Get the length of a `String`, as an integer.
+* Create a character variable.
+* Get a specific character out of a `String`, from a specific index.
+
+What might be missing, or more general learning outcomes:
+
+* Explain what the empty `String` is.
+* Draw text on the canvas. :processing:
+* 
