--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -150,4 +150,64 @@ What might be missing, or more general learning outcomes:
 
 * Explain what the empty `String` is.
 * Draw text on the canvas. :processing:
-* 
+* Explain why number types cannot be assigned to `String` types, and vice-versa.
+* Explain how numbering starts with indexes (at 0).
+* Use `String` methods.
+* Call *methods* on an **object**.
+
+### Unit 9
+
+* Make integer or floating point variables that use more or less memory.
+  :abiguous:
+* Convert between data types using explicit and implicit casts.
+
+**Note**: section 9.2 is marked as "Advanced" and explains bits and bytes at a
+low(er) level, an introduction to number systems. Includes the definition of a
+bit, nibble, byte, then explains prefixes (mega, giga, tera).
+
+What might be missing, or more general learning outcomes:
+
+* Demonstrate integer overflow.
+* Choose an appropriate number type to represent a value.
+* Explain why explicit casting is required.
+* Explain what happens to numeric data when explicit casting is applied.
+
+### Unit 10
+
+* Create boolean variables and store `true` and `false` in them.
+* Use boolean variables in `if` statements to have conditional programs: actions
+  that depend on a boolean test.
+* Use `else` blocks to have code run when a condition is not true.
+* Perform basic boolean operations, the `not`, `and`, and `or` operations.
+* Use nested `if` statements, when one conditional is inside another.
+
+What might be missing, or more general learning outcomes:
+
+* Use global variables `mousePressed` and `keyPressed` to inspect state.
+  :processing:
+* Evaluate logical expressions.
+* Explain how variable scope is affected by nested blocks.
+
+### Unit 11
+
+* Compare numerical values, and see if they are equal, or if one is larger than
+  the other.
+* Compare booleans to see if they are equal.
+* Combine boolean and relational operations to complete complex tasks.
+* Compare `String` data, to see if two strings are equal.
+* Construct if-else-if chains.
+
+What might be missing, or more general learning outcomes:
+
+* Explain why using relational operators on boolean types is discouraged.
+  Specifically, why you should prefer `if(x)` instead of `if(x == true)`.
+* Explain why floating point numbers should not be compared for equality using
+  relational operators.
+* Explain how logical expressions can be "short-circuit"ed.
+* Use short-circuit expressions in a program.
+* Explain why `if` statements without curly braces should be avoided.
+
+### Unit 12
+
+* Create a `for` loop to repeat an operation on a fixed number of items.
+* Create a `while` loop to repeat an operation while some condition is true.
