Up to (but not including) unit 15.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -211,3 +211,67 @@ What might be missing, or more general learning outcomes:
 
 * Create a `for` loop to repeat an operation on a fixed number of items.
 * Create a `while` loop to repeat an operation while some condition is true.
+
+What might be missing, or more general learning outcomes:
+
+* Write code that repeats execution with a loop control structure.
+* Choose the appropriate loop control structure for a given problem.
+* List the order of operations of a `for`-loop control structure.
+* Figure out where a program crashed based on a stack trace. :processing:
+* Calculate how many times a `for` loop executes.
+* List the order of operations of a `while`-loop control structure.
+* Use a `do`/`while` loop control structure in a program.
+* Explain how loop blocks affect scope.
+* Identify common problems encountered when writing loop control structures.
+
+### Unit 13
+
+* Use loops to solve a wide range of problems. :ambiguous:
+* Create a nested loop to iterate two variables over a range of values.
+
+What might be missing, or more general learning outcomes:
+
+* Use a boolean variable to indicate that an event has happened. State
+  management.
+* Write code that uses nested loops.
+* Use nested loops to solve a problem.
+* Identify when a nested loop should be used to solve a problem.
+* List the order of operations of a nested loop structure.
+* List the state of variables in a nested loop structure.
+* Calculate how many times a statement will execute in a nested loop structure.
+
+### Unit 14
+
+* Create a function to take one or more parameters.
+* Create a function that returns data.
+* Have one function call another function. :duplicate:
+* Apply top-down programming to simplify and solve complex problems. :duplicate:
+
+What might be missing, or more general learning outcomes:
+
+* Explain why global variables are an inferior way to change the behaviour of a
+  function.
+* Explain how a function parameter is assigned a value. :ambiguous:
+* Explain how scoping rules apply to function parameters.
+    * More specifically: explain how different functions may have the same
+      parameter name.
+* Explain how providing a value to a function call *copies* the value to the
+  function.
+* Explain the purpose of the `return` keyword.
+* Explain that returning data *copies* the value back to the caller.
+* List the order of statement execution when a function is called.
+* Use stub functions to help break down a solution into smaller parts.
+* Iteratively build a string by appending characters to the empty string.
+* Choose an appropriate initial value for an accumulator variable.
+* Choose when to use global variables and when to use local variables.
+* Define the term "side-effects", in relation to functions.
+* Explain why functions that have side-effects should be avoided.
+
+**Note**: We're talking about and giving examples of functional decomposition,
+but I'm not sure if we're expecting students to be able to *practice* this yet,
+or just make observations about how it's done. That is: are we expecting them to
+be able to "Identify if existing code can be decomposed further", or are we
+expecting them to be able to "Decompose a problem into functional units"?
+
+### Unit 15
+
