--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -275,3 +275,100 @@ expecting them to be able to "Decompose a problem into functional units"?
 
 ### Unit 15
 
+* Describe the work flow that your computer takes, going from your Processing
+  code, to a computer program running on your computer. :processing:
+
+What might be missing, or more general learning outcomes:
+
+* Define the term compiler.
+* Explain the purpose of a compiler.
+* Compare and contrast high level languages and machine language.
+* List the limitations of a compiled language.
+* Define the term "Virtual machine".
+* Explain the purpose of a virtual machine.
+* Compare and contrast virtual machines and compiled code.
+* List the limitations of virtual machines.
+* Define the term "source code".
+* Explain what happens to "source code" before the program starts running on a
+  computer.
+
+**Note**: Some information in this chapter is strictly not true: "Clear examples
+of this in daily life are Windows-based and Mac-based machines, they speak
+different languages" -- macOS and Windows both run on x86, so they speak the
+same language. You have to invoke a different spell on each before the code
+actually runs... But that's so deeply technical that they don't need to know or
+worry about that yet.
+
+### Unit 16
+
+* Create an array with any data type and size.
+* Store data in an array, and retrieve data from it.
+* Iterate through arrays with a loop.
+* Get the length of any array.
+* Initialize an array with literals.
+
+What might be missing, or more general learning outcomes:
+
+* Give an example of why arrays are useful.
+* Define the term "array".
+* Use an array in a program.
+* List the limitations of an array.
+* Distinguish "declaration" from "instantiation".
+* Compare and contrast `String` and arrays.
+
+### Unit 17
+
+* Determine the default value stored in your arrays immediately after creation.
+  :processing:
+* Use and compare variables against `null`.
+* Copy an array.
+* Compare an array.
+
+What might be missing, or more general learning outcomes:
+
+* Explain how arrays differ from primitive types in terms of where in memory the
+  values are stored.
+* Define the term `null`.
+* Distinguish `null` from the empty string.
+* Explain why arrays must be copied and compared with loops.
+
+### Unit 18
+
+* Use arrays as parameters to functions.
+* Use arrays are return types from functions.
+* Create a new array inside a function.
+* Modify the data in an array in a function.
+
+What might be missing, or more general learning outcomes:
+
+* Explain why arrays as arguments behave differently than primitive variables.
+
+### Unit 19
+
+* Implement a count-as-you-go partially-filled array.
+* Implement an impossible-value partially-filled array.
+* Implement linear search on an array.
+* Implement binary search on an array.
+
+What might be missing, or more general learning outcomes:
+
+* Use a "pointer" value to indicate where in an array the next value should go.
+* Use a "sentinel" value to indicate which elements in an array are unused.
+* Define the term "sentinel" value.
+* Choose an appropriate sentinel value for a problem.
+* Explain the limitations of partially-filled arrays.
+* List strategies for overcoming the limitations of partially filled arrays.
+* Give an example of when linear search might be useful.
+* Explain the linear search algorithm in plain-English.
+* Explain the limitations of linear search.
+* Give an example of when binary search might be useful.
+* Explain the binary search algorithm in plain-English.
+* Explain the limitations of binary search.
+* Measure the complexity of linear search and binary search.
+* Compare and contrast linear search and binary search.
+
+### Unit 20
+
+None listed.
+
+### Unit 21
