Finished getting outcomes from the textbook.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -372,3 +372,25 @@ What might be missing, or more general learning outcomes:
 None listed.
 
 ### Unit 21
+
+**Note**: Unit 21 is explicitly marked as not part of the course.
+
+* Build composite data types as classes.
+* Create an instance of a class.
+* Change the values of data in an instance of a class.
+* Pass an instance of a class to a function.
+* Explain how using classes is an improvement over not using classes.
+
+### Unit 22
+
+**Note**: Unit 22 is explicitly marked as not part of the course.
+
+* Begin using an IDE to write Java programs.
+* Write a simple Java program.
+* Get input from the keyboard in a Java program.
+
+### Unit 23
+
+**Note**: Unit 23 is explicitly marked as not part of the course.
+
+* Use Processing as a library in a Java program.
