Started summarizing work, better organizing 1010 outcomes.

--- a/existing/COMP 1010.md
+++ b/existing/COMP 1010.md
@@ -15,24 +15,35 @@ Tasks
 -----
 
 * [X] Contact Heather 2020-01-07
-* [ ] Extract outcomes from Jim's book.
+* [X] Extract outcomes from Jim's book.
+* [X] Extract course objectives from Jim's book.
+* [ ] Make sure that learning objectives in the book align with course material
+      shared.
+
+Course objectives
+-----------------
+
+What are the major objectives for a student taking this course?
+
+* Gain basic programming skills by writing programs using the Processing
+  programming environment.
+* Describe basic programming concepts and constructs in plain English. 
+* Get a better idea of how we communicate ideas in a way that computers can
+  understand and act on.
+* Begin to think abstractly by visiting algorithms *before* coding them.
 
 Learning outcomes
 -----------------
 
-The following sections of learning outcomes are extracted verbatim from [Jim's
-online textbook].
+### Section 1: Getting started
 
-[Jim's online textbook]:
-https://cs.umanitoba.ca/~young/learnToProgram/LTP/LTP-AllUnits.pdf
-
-### Unit 1
+#### Unit 1: Introduction
 
 * Explain to a layperson what computer programming is
 * Calculate how many operations a computer can perform each second based on its
   specifications
 
-### Unit 2
+#### Unit 2: Processing and Programming Basics
 
 * Choose and set the canvas size for your programs. :processing:
 * Set the location where shapes are drawn on the canvas. :processing:
@@ -46,7 +57,7 @@ What might be missing, or more general learning outcomes:
 * Write a simple program.
 * Run a simple program.
 
-### Unit 3
+#### Unit 3: Variables and Integers
 
 * Create a new integer variable and give it a unique name.
 * Store information into a variable (e.g., the number 10).
@@ -68,7 +79,7 @@ What might be missing, or more general learning outcomes:
   modulus).
 * Explain the purpose of the modulus operator.
 
-### Unit 4
+#### Unit 4: Coding Style and Standards
 
 * Choose meaningful variable names that make your code more readable.
 * Create *named constants* that cannot change once set, as a safety feature.
@@ -79,7 +90,7 @@ What might be missing, or more general learning outcomes:
 * Identify values that should be represented as a named constant.
 * Use named constants in a program.
 
-### Unit 5
+#### Unit 5: Active Processing
 
 * Create an active program that can change while it is running. :processing:
 * Create animations where the drawing changes as time passes. :processing:
@@ -102,7 +113,9 @@ What might be missing, or more general learning outcomes:
   (which functions get run in what order, when global variables are initialized,
   etc.). :processing:
 
-### Unit 6
+### Section 2: Programming Basics
+
+#### Unit 6: User Defined Functions Part 1
 
 * Create your own user-defined functions.
 * Use your custom functions within other functions.
@@ -118,7 +131,7 @@ What might be missing, or more general learning outcomes:
 * Determine the visibility of a variable declared in a program.
 * Define the term "local variable".
 
-### Unit 7
+#### Unit 7: Real Numbers - Floats
 
 * Create variables to store real numbers.
 * Work with real numbers, e.g., do basic math operations.
@@ -137,7 +150,7 @@ What might be missing, or more general learning outcomes:
 * Explain how floating point numbers are limited in a computer program.
 * Use compound assignment/arithmetic operators (i.e., `+=`, `++`).
 
-### Unit 8
+#### Unit 8: Text in Processing: Strings
 
 * Create variables to store text data, called `String`s.
 * Combine multiple `String`s together.
@@ -155,7 +168,7 @@ What might be missing, or more general learning outcomes:
 * Use `String` methods.
 * Call *methods* on an **object**.
 
-### Unit 9
+#### Unit 9: Data Types and Memory
 
 * Make integer or floating point variables that use more or less memory.
   :abiguous:
@@ -172,7 +185,7 @@ What might be missing, or more general learning outcomes:
 * Explain why explicit casting is required.
 * Explain what happens to numeric data when explicit casting is applied.
 
-### Unit 10
+#### Unit 10: True and False - Booleans
 
 * Create boolean variables and store `true` and `false` in them.
 * Use boolean variables in `if` statements to have conditional programs: actions
@@ -188,7 +201,9 @@ What might be missing, or more general learning outcomes:
 * Evaluate logical expressions.
 * Explain how variable scope is affected by nested blocks.
 
-### Unit 11
+### Section 3: Advanced Constructs and Background
+
+#### Unit 11: Advanced Conditionals
 
 * Compare numerical values, and see if they are equal, or if one is larger than
   the other.
@@ -207,7 +222,7 @@ What might be missing, or more general learning outcomes:
 * Use short-circuit expressions in a program.
 * Explain why `if` statements without curly braces should be avoided.
 
-### Unit 12
+#### Unit 12: Loops
 
 * Create a `for` loop to repeat an operation on a fixed number of items.
 * Create a `while` loop to repeat an operation while some condition is true.
@@ -224,7 +239,7 @@ What might be missing, or more general learning outcomes:
 * Explain how loop blocks affect scope.
 * Identify common problems encountered when writing loop control structures.
 
-### Unit 13
+#### Unit 13: Advanced Loops
 
 * Use loops to solve a wide range of problems. :ambiguous:
 * Create a nested loop to iterate two variables over a range of values.
@@ -240,7 +255,7 @@ What might be missing, or more general learning outcomes:
 * List the state of variables in a nested loop structure.
 * Calculate how many times a statement will execute in a nested loop structure.
 
-### Unit 14
+#### Unit 14: User Defined Functions Part 2
 
 * Create a function to take one or more parameters.
 * Create a function that returns data.
@@ -273,7 +288,7 @@ or just make observations about how it's done. That is: are we expecting them to
 be able to "Identify if existing code can be decomposed further", or are we
 expecting them to be able to "Decompose a problem into functional units"?
 
-### Unit 15
+#### Unit 15: Compiling and the Java Virtual Machine
 
 * Describe the work flow that your computer takes, going from your Processing
   code, to a computer program running on your computer. :processing:
@@ -299,7 +314,9 @@ same language. You have to invoke a different spell on each before the code
 actually runs... But that's so deeply technical that they don't need to know or
 worry about that yet.
 
-### Unit 16
+### Section 4: Arrays
+
+#### Unit 16: Array Basics
 
 * Create an array with any data type and size.
 * Store data in an array, and retrieve data from it.
@@ -316,7 +333,7 @@ What might be missing, or more general learning outcomes:
 * Distinguish "declaration" from "instantiation".
 * Compare and contrast `String` and arrays.
 
-### Unit 17
+#### Unit 17: Arrays and Memory
 
 * Determine the default value stored in your arrays immediately after creation.
   :processing:
@@ -332,7 +349,7 @@ What might be missing, or more general learning outcomes:
 * Distinguish `null` from the empty string.
 * Explain why arrays must be copied and compared with loops.
 
-### Unit 18
+#### Unit 18: Arrays and Functions
 
 * Use arrays as parameters to functions.
 * Use arrays are return types from functions.
@@ -343,7 +360,7 @@ What might be missing, or more general learning outcomes:
 
 * Explain why arrays as arguments behave differently than primitive variables.
 
-### Unit 19
+#### Unit 19: Working With Arrays: Techniques
 
 * Implement a count-as-you-go partially-filled array.
 * Implement an impossible-value partially-filled array.
@@ -367,13 +384,16 @@ What might be missing, or more general learning outcomes:
 * Measure the complexity of linear search and binary search.
 * Compare and contrast linear search and binary search.
 
-### Unit 20
+### Section 5: Additional Notes
+
+**Note**: All learning outcomes in section 5 are explicitly not part of the
+course material.
+
+#### Unit 20: End of the Course
 
 None listed.
 
-### Unit 21
-
-**Note**: Unit 21 is explicitly marked as not part of the course.
+#### Unit 21: Introduction to Objects
 
 * Build composite data types as classes.
 * Create an instance of a class.
@@ -381,16 +401,12 @@ None listed.
 * Pass an instance of a class to a function.
 * Explain how using classes is an improvement over not using classes.
 
-### Unit 22
-
-**Note**: Unit 22 is explicitly marked as not part of the course.
+#### Unit 22: Introduction to Java
 
 * Begin using an IDE to write Java programs.
 * Write a simple Java program.
 * Get input from the keyboard in a Java program.
 
-### Unit 23
-
-**Note**: Unit 23 is explicitly marked as not part of the course.
+#### Unit 23: Using Processing in Java
 
 * Use Processing as a library in a Java program.
