Through 2 weeks of COMP 1020.

--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -16,3 +16,155 @@ Tasks
 -----
 
 * [X] Contact Olivier
+* [ ] Extract outcomes from Olivier's Fall 2019 offering.
+
+Course objectives
+-----------------
+
+Course objectives from distance section:
+
+* Apply programming techniques learned in COMP 1010 to newer and larger
+  problems.
+* Use classes and objects effectively.
+* Write software that deals with large sets of data using files stored on disk.
+* Create and use collections of data, with an emphasis on the use of classes.
+* Solve problems using related classes (inheritance).
+* Apply common algorithms, such as searching and sorting, to collections.
+* Formulate recursive solutions to problems, and write recursive
+  (self-referential) methods.
+* Use data structures other than arrays (such as 2D arrays and linked lists).
+* Recognize when alternate data structures are appropriate to certain kinds of
+  problems.
+* Compare the efficiencies of different algorithms used to solve similar
+  problems.
+
+Learning outcomes
+-----------------
+
+### Week 1 & 2: Course introduction, real Java
+
+**Note**: Most of this week's content is reviewing content from 1010, and/or
+translating Python concepts into Java for 1012 students. I wonder how many
+students are enrolled in 1020 from 1012, and if the outcomes listed here are
+disproportionately large for the number of students that actually need this as
+"new" material.
+
+
+* Translate concepts from one programming language to another
+  ({Processing,Python} => Java).
+* Choose an editor or IDE.
+* Compile and run a Java program.
+* Write a simple program in Java.
+* Use and follow naming conventions for classes, variables, and constants.
+* Write comments in a Java program.
+* Create a variable with a type. :1012-transition:
+* Create a `String` constant. :1012-transition:
+* Concatenate one or more `String`s together. :1010:
+* List primitive data types in Java. :1010:
+* List ranges of primitive data types in Java. :1010:
+* Use `long` literals in a Java program (with the `L` suffix).
+* Use floating point literals in a Java program (with the `f` and `d` suffixes).
+* Append primitive data types to `String` with the `+` operator. :1010:
+* Decide the type of the result of an expression between types (e.g., adding an
+  `int` and a `double` result in a `double`). :1010:
+* Use arithmetic operators in an expression. :1010:
+* Declare and initialize A variable in a Java program. :1010: :1012-transition:
+* Choose meaningful variable names. :1010: :1012:
+* Define the terms "assignment operator", "left operand", and "right operand".
+* List the order in which a statement is evaluated/executed. :1010: :1012:
+* Decide which data type can hold a given value. :1010: :1012-transition:
+* Write a method in a Java program. :1010: :1012-transition:
+* Define the terms "method signature" and "method body".
+* Call a method in a Java program. :1010: :1012:
+* Call a method in a Java program using variables as arguments. :1010: :1012:
+* Call a method in a Java program using literals as arguments. :1010: :1012:
+* Declare and initialize a "global" variable in a Java program.
+* Declare and initialize named constants in a Java program. :1010:
+  :1012-transition:
+* Get input from the keyboard in a Java program. :1012-transition:
+* Get *tokenized* input from the keyboard in a Java program.
+* Convert `String` values into numeric types with parsing functions.
+* Convert between types by casting values. :1010: :1012: :1012-transition:
+* Compare and contrast prefix and postfix use of the `++` and `--` operators.
+* Use shorthand increment and decrement operators (`+=`, `-=`, `++`, `--`).
+  :1010: :1012:
+* Use boolean operators in a program. :1010: :1012-transition:
+* Use relational operators in a program. :1010: :1012:
+* Compare `String` values with the appropriate comparison method. :1010:
+  :1012-transition:
+* Explain why using relational operators in `boolean` types is discouraged.
+  :1010:
+* Use conditional statements in a program. :1010: :1012: :1012-transition:
+* Use looping structures in a program. :1010: :1012: :1012-transition:
+* List the order of execution in a C-style `for` loop. :1010: :1012-transition:
+* Use `break` and `continue` statements in a loop structure.
+* Use the "escape character" to encode special values in a `String` literal.
+* Use `String` methods. :1010: :1012:
+* Use the `Math` library. :1010: :1012:
+* Use language-specific documentation to find more information about
+  language-specific library functions/methods. :1012:
+* Declare, initialize, and use an array. :1010: :1012-transition:
+* List limitations of arrays in Java. :1010: :1012-transition:
+* List the default values of elements in an array in Java. :1010:
+  :1012-transition:
+* Initialize an array with an array literal. :1010: :1012-transition:
+* Determine the length of an array. :1010: :1012-transition:
+* Copy an array. :1010: :1012-transition:
+* Explain what happens if you use the assignment operator on array values.
+  :1010: :1012-transition:
+* Use a "foreach"-style loop in Java. :1012:
+
+### Week 3: OOP Basics 1
+
+* Define the terms OOP, Object-oriented programming.
+* Explain how *types* and *classes* are related to one another.
+* List the properties of a class (name, instance variables, instance methods).
+* Distinguish between a class definition and an instance of a class.
+* Declare, initialize, and use instances of a user-defined class.
+* Declare, define, and call instance methods that operate on instance variables.
+* Explain what the `this` keyword represents in an instance method.
+* Write a `toString` instance method for a class.
+* Explain the purpose of a constructor method.
+* Write a constructor method for a class in Java.
+* Define the term "default constructor".
+* List access modifiers that can be applied to instance variables/methods in
+  Java.
+* Explain how different access modifiers change the visibility of an instance
+  variable/method.
+* Choose an appropriate access modifier for instance variables and methods.
+* Define the term "encapsulation".
+* Explain how access modifiers enable to you apply the principle of
+  encapsulation.
+* Explain why encapsulation is useful.
+* Define the terms "accessor" and "mutator".
+* Explain why accessors and mutators are necessary.
+* Decide *if* accessors and mutators are necessary for an instance variable.
+* Compare and contrast class variables and methods with instance variables
+  and methods.
+* Decide if a method or variable should be defined as instance or class.
+* Call class methods defined in a different class.
+* Give an example of a class variable in the Java standard library.
+* Give an example of a class method in the Java standard library.
+* Give an example of an instance method in the Java standard library.
+* Write comparison instance methods for a class.
+
+### Week 4: OOP Basics 2
+
+### Week 5: Multidimensional arrays
+
+### Week 6: File I/O and exceptions
+
+### Week 7: OOP Polymorphism 1
+
+### Week 8: OOP Polymorphism 2
+
+### Week 9: Strings, ArrayLists
+
+### Week 10: Linked lists
+
+### Week 11: Recursion
+
+### Week 12: Sorting
+
+### Week 13: Advanced sorting, review
+
