--- a/existing/COMP 1020.md
+++ b/existing/COMP 1020.md
@@ -150,7 +150,38 @@ disproportionately large for the number of students that actually need this as
 
 ### Week 4: OOP Basics 2
 
+* Decide if a type is an "Object" or not an "Object".
+* Compare and contrast the behaviour of references to objects and primitive
+  types.
+* Write a method to create a copy of an instance of an object.
+* Define the term "immutable".
+* Explain what actually happens when an instance of an immutable object is
+  modified in Java.
+* Compare and contrast a "shallow copy" and a "deep copy".
+* Decide when to use a shallow copy, and when to use a deep copy.
+* Draw a diagram that shows the state of references given a piece of code.
+* Write and call a method that takes a reference as a parameter.
+* Explain what happens when an instance of an object has no references to it in
+  Java.
+* Write a class with user-defined types as instance variables.
+* Write a class that has an instance variable with its own type (a `Person` that
+  has a `Person` instance variable).
+* Decide how changing a value in one scope affects the value in another scope.
+  (passing references vs passing values)
+* Write and use a "list" class to represent a collection of values.
+* Explain how using a "list" class can be better than using an array.
+
 ### Week 5: Multidimensional arrays
+
+* Give an example of multidimensional data.
+* Declare, initialize, and use a multidimensional array in a Java program.
+* Draw a diagram representing the state of references in a multidimensional
+  array.
+* Define the term "ragged" array.
+* Declare, initialize, and use a "ragged" array in a Java program.
+* Write a class that has a multidimensional array as an instance variable.
+* Create "useful" instance methods for a class.
+* Write a simple, manual testing method for a class in a separate file.
 
 ### Week 6: File I/O and exceptions
 
